--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import "./luz.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -81,7 +83,7 @@ table {
   width: 100%;
   border-collapse: collapse;
 
-  box-shadow: 0 0 .4rem .2rem rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 0.4rem 0.2rem rgba(255, 255, 255, 0.3);
 }
 
 table * {
@@ -98,7 +100,6 @@ table th {
 table th:first-child {
   border-top-left-radius: 0.4rem;
 }
-
 
 table td {
   padding: 1.5rem;
@@ -125,11 +126,11 @@ td.user img {
 }
 
 table tr:nth-child(even) {
-  background: #dddddd45;
+  background: #dddddd0e;
 }
 
 table tr:nth-child(odd) {
-  background: #eeeeee67;
+  background: #34424361;
 }
 td .remove {
   background: none;
